# axum-quickstart

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  api-demo.sh  api-test.py  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: rust.yml
docs/: sqlx-offline-mode-howto.md  webauthn-architecture.md
examples/: sample_formatted_code.rs
migrations/: 20250101000001_create_users_table.sql  20250101000002_create_credentials_table.sql
scripts/: api-test.py  ci-local.sh  dev-setup.sh  run-integration-tests.sh  run-unit-tests.sh  shutdown.sh  startup.sh  test-all.sh
src/: app_state.rs  config.rs  lib.rs  main.rs  session.rs
src/domain/: metrics.rs  mod.rs  repository.rs  webauthn_models.rs
src/handlers/: health.rs  metrics.rs  mod.rs  movies.rs  root.rs  shared_types.rs  webauthn_authenticate.rs  webauthn_credentials.rs  webauthn_register.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs  postgres_repository.rs  tests.rs
src/infrastructure/metrics/: mod.rs
src/infrastructure/metrics/noop/: mod.rs  noop_metrics.rs
src/infrastructure/metrics/prometheus/: counters.rs  mod.rs  prometheus_metrics.rs  recorder.rs
src/infrastructure/webauthn/: mod.rs
tests/: database_repository.rs  integration.rs  metrics_endpoint.rs  webauthn_authentication.rs  webauthn_credentials.rs  webauthn_registration.rs
tests/common/: mod.rs
