[package]
name = "axum-quickstart"
version = "1.1.2"
edition = "2021"
authors = ["John Basrai <john@basrai.dev>"]
description = "Axum Quick-Start API with Redis backend, full CRUD, and integration tests."
license = "MIT"
readme = "README.md"
keywords = ["axum", "redis", "rust", "api", "web"]
categories = ["web-programming", "asynchronous", "api-bindings"]
publish = false  # prevents accidental cargo publish, since it's personal

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4.40"
futures = "0"
hex = "0.4.3"
redis = { version = "0.30", features = ["aio","tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "signal"] }
tracing = "0"
tracing-subscriber = "0"

[dev-dependencies]
rand = "0.8"