[package]
name = "axum-quickstart"
version = "1.4.0"
edition = "2021"
authors = ["John Basrai <john@basrai.dev>"]
description = "Axum Quick-Start API with Redis backend, full CRUD, and integration tests."
license = "MIT"
readme = "README.md"
keywords = ["axum", "redis", "rust", "api", "web"]
categories = ["web-programming", "asynchronous", "api-bindings"]
publish = false  # prevents accidental cargo publish, since it's personal

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15"
futures = "0"
hex = "0.4.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
once_cell = "1.21"
prometheus = "0.14"
redis = { version = "0.30", features = ["aio","tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "signal"] }
tracing = "0"
tracing-subscriber = "0"
uuid = { version = "1", features = ["serde", "v4"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

[dev-dependencies]
rand = "0.8"
# This is only used in src/config.rs to avoid conflict on global environment.
serial_test = "3.2"
tower = { version = "0.5", features = ["util"] }
